<resources>
    <string name="app_name">DiallingApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_2">2</string>
    <string name="add_a_number">Add a number</string>
    <string name="_1">1</string>
    <string name="_3">3</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_9">9</string>
    <string name="_6">6</string>
    <string name="_0">0</string>
    <string name="snowflake">*</string>
    <string name="sharp">#</string>
    <string name="contacts">Contacts</string>
    <string name="_382_67_254_625">+382-67-254-625</string>
    <string name="didnt_connect">didnt connect</string>
    <string name="apr_27_14_16">Apr 27, 14:16</string>
    <string name="danilo_milkov_tosic">Danilo Milkov Tosic</string>
    <string name="call_history">Call History</string>
    <string name="you_have_no_contacts_yet">You have no contacts yet</string>
    <string name="load_contacts_to_recycler">Load Contacts to Recycler</string>
    <string name="call">Call</string>
    <string name="chat">Chat</string>
    <string name="dashboard">Dashboard</string>
    <string name="recharge">Recharge</string>
    <string name="profile">Profile</string>
    <string name="support">Support</string>
    <string name="call_frag">Call</string>
    <string name="contacts_frag">Contacts</string>
    <string name="home">Home</string>
    <string name="chat_frag">Chat</string>
    <string name="settings">Settings</string>
</resources>