<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:maxHeight="88dp"
    android:id="@+id/callHistory">

    <TextView
        android:id="@+id/callTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apr_27_14_16"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/callNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/callTime"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        android:text="@string/_382_67_254_625"
        android:textSize="16sp"/>
    <TextView
        android:id="@+id/callType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/callNumber"
        android:layout_marginStart="120dp"
        android:text="@string/didnt_connect"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="22dp"
        android:textSize="16sp"/>



</androidx.constraintlayout.widget.ConstraintLayout>
