<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HomeFragment">

    <ImageView
        android:backgroundTint="#6BCCD3"
        android:id="@+id/firstBackground"
        android:layout_width="440dp"
        android:layout_height="200dp"
        android:src="@drawable/background"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="-32dp"
        app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
        android:id="@+id/placeholder"
        android:layout_width="136dp"
        android:layout_height="136dp"
        android:src="@drawable/account_circle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="48dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/call"
        android:layout_width="80dp"
        android:layout_height="96dp"
        app:cornerRadius="70dp"
        app:icon="@drawable/phone_home"
        app:iconGravity="start"
        app:backgroundTint="#6BCCd3"
        app:strokeColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstBackground"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"/>
    <TextView
        android:id="@+id/callText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/call"
        app:layout_constraintTop_toBottomOf="@+id/call"
        app:layout_constraintStart_toStartOf="@+id/call"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:layout_marginStart="24dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/chat"
        android:layout_width="80dp"
        android:layout_height="96dp"
        app:cornerRadius="70dp"
        app:icon="@drawable/chat"
        app:iconGravity="start"
        app:backgroundTint="#6BCCd3"
        app:strokeColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/call"
        app:layout_constraintTop_toBottomOf="@id/firstBackground"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"/>
    <TextView
        android:id="@+id/chatText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chat"
        app:layout_constraintTop_toBottomOf="@+id/chat"
        app:layout_constraintStart_toStartOf="@+id/chat"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:layout_marginStart="24dp"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/dashboard"
        android:layout_width="80dp"
        android:layout_height="96dp"
        app:cornerRadius="70dp"
        app:icon="@drawable/monitor"
        app:iconGravity="start"
        app:backgroundTint="#6BCCd3"
        app:strokeColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/chat"
        app:layout_constraintTop_toBottomOf="@id/firstBackground"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"/>
    <TextView
        android:id="@+id/dashboardText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dashboard"
        app:layout_constraintTop_toBottomOf="@+id/dashboard"
        app:layout_constraintStart_toStartOf="@+id/dashboard"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:layout_marginStart="8dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/recharge"
        android:layout_width="80dp"
        android:layout_height="96dp"
        app:cornerRadius="70dp"
        app:icon="@drawable/wallet"
        app:backgroundTint="#6BCCd3"
        app:strokeColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/callText"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"/>
    <TextView
        android:id="@+id/rechargeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recharge"
        app:layout_constraintTop_toBottomOf="@+id/recharge"
        app:layout_constraintStart_toStartOf="@+id/recharge"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:layout_marginStart="8dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/profile"
        android:layout_width="80dp"
        android:layout_height="96dp"
        app:cornerRadius="70dp"
        app:icon="@drawable/person"
        app:iconGravity="start"
        app:backgroundTint="#6BCCd3"
        app:strokeColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/call"
        app:layout_constraintTop_toBottomOf="@id/chatText"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"/>
    <TextView
        android:id="@+id/profilText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        app:layout_constraintTop_toBottomOf="@+id/profile"
        app:layout_constraintStart_toStartOf="@+id/profile"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:layout_marginStart="16dp"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/support"
        android:layout_width="80dp"
        android:layout_height="96dp"
        app:cornerRadius="70dp"
        app:icon="@drawable/info"
        app:iconGravity="start"
        app:backgroundTint="#6BCCd3"
        app:strokeColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/chat"
        app:layout_constraintTop_toBottomOf="@id/dashboardText"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"/>
    <TextView
        android:id="@+id/supportText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/support"
        app:layout_constraintTop_toBottomOf="@+id/support"
        app:layout_constraintStart_toStartOf="@+id/support"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:layout_marginStart="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>