<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ContactInfoFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/toolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contacts"
            android:textStyle="bold"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp">
        </TextView>
    </androidx.appcompat.widget.Toolbar>
    <ImageView
        android:id="@+id/searchIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/search"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="56dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        tools:ignore="ContentDescription">
    </ImageView>
    <ImageView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/searchIcon"
        android:layout_marginStart="12dp"
        android:src="@drawable/back_arrow"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        tools:ignore="ContentDescription">
    </ImageView>

    <ImageView
        android:id="@+id/profilePic"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/account_circle"
        tools:ignore="ContentDescription" />
    <TextView
        android:id="@+id/contactName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/danilo_milkov_tosic"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="64dp"
        app:layout_constraintTop_toBottomOf="@+id/profilePic"
        android:layout_marginTop="8dp"/>
    <TextView
        android:id="@+id/contactNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/contactName"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:text="@string/_382_67_254_625"
        android:textSize="24sp"/>
    <ImageView
        android:id="@+id/pozivcic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/contactNumber"
        android:layout_marginStart="64dp"
        app:layout_constraintTop_toBottomOf="@+id/contactName"
        android:layout_marginTop="24dp"
        android:src="@drawable/dial_icon"
        tools:ignore="ContentDescription" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/pozivcic"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@+id/contactName"
        android:layout_marginTop="24dp"
        android:src="@drawable/message_icon"
        tools:ignore="ContentDescription" />
    <TextView
        android:id="@+id/callHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/call_history"
        app:layout_constraintTop_toBottomOf="@+id/contactNumber"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/callRecycler"
        android:layout_width="match_parent"
        android:layout_height="288dp"
        app:layout_constraintTop_toBottomOf="@+id/callHistory"
        android:layout_marginTop="16dp"
        tools:listitem="@layout/call_item">
    </androidx.recyclerview.widget.RecyclerView>


</androidx.constraintlayout.widget.ConstraintLayout>